--- a/nonlinear1.html
+++ b/nonlinear1.html
@@ -239,6 +239,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="nonlinear1" class="section level1 hasAnchor" number="8">
 <h1><span class="header-section-number">8</span> Nonlinearity Part I<a href="nonlinear1.html#nonlinear1" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p><span class="math display">\[
+\def\hbeta{\hat \beta}
+\def\R{\mathbb{R}}
+\def\I{\mathbf{I}}
 \def\x{\mathbf{x}}
 \def\Rr{\mathbb{R}}
 \newcommand{\argmin}{\mathop{\rm argmin}}
